--- a/templates/index.html
+++ b/templates/index.html
@@ -18,11 +18,18 @@
 
     <div id="map"></div>
 
-    <div id="route-sidebar" style="display:none;">
+    
+    <div id="route-sidebar">
+        <div class="sidebar-header">
         <h4>Tracked Routes</h4>
+        </div>
         <div id="sidebar-routes-list">
         </div>
     </div>
+
+    <button id="sidebar-toggle-btn" class="sidebar-toggle" title="Toggle Sidebar">
+        <span class="chevron-icon"></span> 
+    </button>
 
     <div id="operators-modal" class="modal" style="display:none;">
         <div class="modal-content">
