--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,9 @@
     </div>
 
     <button id="sidebar-toggle-btn" class="sidebar-toggle" title="Toggle Sidebar">
-        <span class="chevron-icon"></span> 
+        <svg class="chevron-svg-icon" viewBox="0 0 10 10" xmlns="http://www.w3.org/2000/svg">
+            <polyline points="3,2 7,5 3,8" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
     </button>
 
     <div id="operators-modal" class="modal" style="display:none;">
